changed signin signup to make it work
